Fixes misalignment, adds keyboard control in search bar and other minor changes

--- a/caas-web/src/main/resources/public/css/search_bar.css
+++ b/caas-web/src/main/resources/public/css/search_bar.css
@@ -5,26 +5,26 @@
     text-align: left;
 }
 #search_field {
-    display: inline;
     box-sizing: border-box;
     font-size: 1.2em;
     border: none;
     margin-bottom: 0;
+    padding-left: 10px;
     height: 45px;
     width: 400px;
 }
 
 #search_submit {
     box-sizing: border-box;
+    left: calc(50% + 200px);
     position: absolute;
     float: right;
-    display: inline;
     height: 45px;
     line-height: 45px;
     vertical-align: center;
     background: #43a047;
     color: white;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 3px 3px 6px 0 rgba(0, 0, 0, 0.2);
     text-decoration: none;
     outline: none !important;
     border: none;
@@ -43,13 +43,16 @@
     border-top: 2px solid #dadada;
     margin: 0;
 }
-.suggestion_item:hover {
+.suggestion_item.selected {
     background: rgb(200,200,200)
 }
 
  @media only screen and (max-width: 500px) {
      #search_suggestion_box {
          width: 220px;
+     }
+     #search_submit {
+         left: calc(50% + 110px);
      }
      #search_field {
          width: 220px;
@@ -59,6 +62,9 @@
  @media only screen and (max-width: 350px) {
       #search_suggestion_box {
          width: 160px;
+     }
+     #search_submit {
+         left: calc(50% + 80px);
      }
      #search_field {
          width: 160px;
